core/codegen/tests/ui-fail-stable/route-warnings.stderr
error: checking for warnings!
  --> tests/ui-fail-stable/route-warnings.rs:25:5
   |
25 |     compile_error!("checking for warnings!")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
